# HvC

./: .gitignore  BUILD_FIXES.md  BUILD_ISSUES.md  CMakeLists.txt  DOCUMENTATION.md  Havel.md  LARGE_FILES.md  Makefile  PROJECT_RULES.md  README.md  build.sh  build_hotkey_test.sh  config.hvl  fix_build.sh  fix_headers.sh  input.hvl  migrate_config.sh  setup.sh
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/: simple_gui_example.cpp
include/: logger.h  system_includes.h  types.hpp  x11_includes.h
include/core/: DisplayManager.hpp
include/sol/: sol.hpp
include/x11/: x11_all.hpp
scripts/: example.hv
src/: IO.cpp  IO.hpp  Logger.cpp  Logger.h  NumPut.h  Other.cpp  Printer.cpp  Printer.h  Rect.hpp  Util.cpp  Util.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  main.cpp  print.c  print.h  test.cpp  types.hpp  x11_includes.h
src/common/: types.hpp
src/core/: AutoClicker.cpp  AutoClicker.hpp  AutoPresser.cpp  AutoPresser.hpp  BrightnessManager.cpp  BrightnessManager.hpp  ConfigManager.hpp  DisplayManager.cpp  DisplayManager.hpp  EmergencySystem.hpp  HotkeyManager.cpp  HotkeyManager.hpp  IO.cpp  IO.hpp  MPVController.cpp  MPVController.hpp  MacroSystem.hpp  MouseGesture.hpp  ScriptEngine.cpp  ScriptEngine.hpp  SequenceDetector.hpp  SocketServer.cpp  SocketServer.hpp  StateManager.hpp
src/gui/: Button.cpp  Button.hpp  Clipboard.cpp  Clipboard.hpp  GUI.cpp  GUI.hpp  GUIEvent.hpp  ImageHandler.cpp  ImageHandler.hpp  InputBox.cpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  MessageBox.cpp  MessageBox.hpp  Screen.cpp  Screen.hpp  Theme.hpp  Widget.cpp  Widget.hpp
src/havel-lang/: test_havel.cpp
src/havel-lang/ast/: AST.cpp  AST.h
src/havel-lang/compiler/: Compiler.cpp  Compiler.h  JIT.cpp  JIT.h
src/havel-lang/lexer/: Lexer.cpp  Lexer.hpp
src/havel-lang/llvm/: LLVMWrapper.h
src/havel-lang/parser/: Parser.cpp  Parser.h
src/havel-lang/runtime/: Clipboard.cpp  Clipboard.hpp  Engine.cpp  Engine.h  Interpreter.cpp  Interpreter.hpp
src/havel-lang/tests/: Tests.h  test_havel.cpp
src/include/: x11_includes.h
src/media/: AutoClicker.hpp  AutoRunner.cpp  AutoRunner.h  MPVController.cpp  MPVController.hpp  MediaControl.cpp  MediaControl.h
src/tests/: CMakeLists.txt  hotkey_test.cpp  io_modifier_test.cpp  io_race_condition_test.cpp  io_test.cpp
src/utils/: Logger.cpp  Logger.h  Logger.hpp  Notifier.hpp  Printer.cpp  Printer.hpp  Rect.hpp  SafeQueue.hpp  Util.cpp  Util.hpp  Utils.cpp  Utils.hpp  print.h
src/window/: CompizManager.cpp  CompizManager.hpp  Rect.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  WindowManagerDetector.cpp  WindowManagerDetector.hpp  WindowMonitor.cpp  WindowMonitor.hpp  WindowRules.hpp  types.hpp
test/: a.out  grab.cpp  send  send.cpp
tests/: TestGUI.cpp
